--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>clarkt的个人网站</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <link rel="shortcuticon" href="favicon.ico">
 </head>
     <body>
         <h1>Hello world</h1>
