--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       server keys on the site - so make sure they match.</p>
       <pre><code class="js-subscription-json"></code></pre>
     </section>
+    <p>error message below:</p>
     <div class="error-msg"></div>
   </main>
 
