--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     </section>
     <p>error message below:</p>
     <div class="error-msg"></div>
+    <p>bla bla key below:</p>
+    <div class="bla-key"></div>
   </main>
 
   <script src="scripts/main.js"></script>
