--- a/frame/index.html
+++ b/frame/index.html
@@ -7,12 +7,18 @@
 </head>
 
 <body>
+  <div id="log"></div>
   <script>
+    var $log = document.getElementById('log');
     navigator.serviceWorker.register('/frame/sub/sw.js?v=1', {scope: '/frame/sub/'})
     .then(function (reg) {
+        $log.innerHTML = 'success';
         var iframe = document.createElement('iframe');
         iframe.src = '/frame/sub/index.html';
         document.body.appendChild(iframe);
+    })
+    .catch(function (err) {
+        $log.innerHTML = 'error';
     });
   </script>
 </body>
