--- a/frame/sub/index.html
+++ b/frame/sub/index.html
@@ -13,7 +13,7 @@
   <script>
     var $log = document.getElementById('log');
     var $log2 = document.getElementById('log2');
-    navigator.serviceWorker.register('/frame/sub/sw.js?v=1', {scope: '/frame/sub/'})
+    navigator.serviceWorker.register('./sw.js?v=1', {scope: '/frame/sub/'})
     .then(function (reg) {
         $log.innerHTML = 'success:' + JSON.stringify(reg);
     })
@@ -28,7 +28,7 @@
         });
     })
     .then(function () {
-        return navigator.serviceWorker.register('/frame/sub/sw-2.js?v=1', {scope: '/frame/sub/'});
+        return navigator.serviceWorker.register('./sw-2.js?v=1', {scope: '/frame/sub/'});
     })
     .then(function (reg) {
         $log2.innerHTML = 'success:' + JSON.stringify(reg);
